--- a/projects/Vijay_Singh_p1.ipynb
+++ b/projects/Vijay_Singh_p1.ipynb
@@ -185,16 +185,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy is  9.9 % \tfor k= 1\n",
+      "Accuracy is  11.7 % \tfor k= 3\n",
+      "Accuracy is  9.7 % \tfor k= 5\n",
+      "Accuracy is  11.5 % \tfor k= 7\n",
+      "Accuracy is  11.0 % \tfor k= 9\n",
+      "index 0\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.11      0.09      0.10       106\n",
+      "           1       0.15      0.12      0.13       118\n",
+      "           2       0.17      0.12      0.14       106\n",
+      "           3       0.07      0.08      0.08        97\n",
+      "           4       0.12      0.13      0.12        92\n",
+      "           5       0.03      0.03      0.03        88\n",
+      "           6       0.09      0.09      0.09       102\n",
+      "           7       0.11      0.12      0.11       102\n",
+      "           8       0.10      0.13      0.11        94\n",
+      "           9       0.06      0.06      0.06        95\n",
+      "\n",
+      "   micro avg       0.10      0.10      0.10      1000\n",
+      "   macro avg       0.10      0.10      0.10      1000\n",
+      "weighted avg       0.10      0.10      0.10      1000\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "#def P2(k_values):\n",
     "\n",
     "### STUDENT START ###\n",
+    "# Prepare a function to fit a kNN classifier on the mini training set.\n",
+    "# Return the predictions and accuracy using the dev data set.\n",
+    "def knn_evaluate(k_val=3):\n",
+    "    knn_cfr = KNeighborsClassifier(k_val)\n",
+    "    # Fit the model using the mini training set\n",
+    "    knn_cfr.fit(mini_train_data, mini_train_labels)\n",
+    "    # Now, collect predictions for the dev data set\n",
+    "    dev_pred = knn_cfr.predict(dev_data)\n",
+    "    # Calculate the accuracy of the predictions by comparing the labels\n",
+    "    # against the predictions returned by the model.\n",
+    "    correct=0\n",
+    "    total = len(dev_pred)\n",
+    "    for i in range(total):\n",
+    "        correct += (dev_pred[i] == dev_labels[i])\n",
+    "    accuracy = (correct * 100)/total\n",
+    "    return dev_pred, accuracy\n",
     "\n",
+    "# Now, evaluate the model using the suggest k-values\n",
+    "# Store the results in a list for later use\n",
+    "knn_choices = [1,3,5,7,9]\n",
+    "knn_preds = []\n",
+    "for i in range(len(knn_choices)):\n",
+    "    k = knn_choices[i]\n",
+    "    pred, acc = knn_evaluate(k)\n",
+    "    print(\"Accuracy is \", acc, \"% \\tfor k=\",k)\n",
+    "    knn_preds.append((k,pred,acc))\n",
     "\n",
-    "    \n",
+    "# Use the stored predictions to evaluate predictions using k=1\n",
+    "from sklearn.metrics import classification_report\n",
+    "i = knn_choices.index(1)\n",
+    "print(\"index\",i)\n",
+    "pred = knn_preds[i][1]\n",
+    "cfr_report = classification_report(dev_labels, pred)\n",
+    "print(cfr_report)\n",
+    "\n",
+    "# Looking at the report, it looks like digit 5 is the most difficult digit to classify.\n",
+    "\n",
     "### STUDENT END ###\n",
     "\n",
     "#k_values = [1, 3, 5, 7, 9]\n",
