--- a/projects/Vijay_Singh_p1.ipynb
+++ b/projects/Vijay_Singh_p1.ipynb
@@ -283,15 +283,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Size:\t 100 \tTime:\t 0.11759209632873535 \tAccuracy:\t 11.7 %\n",
+      "Size:\t 200 \tTime:\t 0.2254340648651123 \tAccuracy:\t 10.3 %\n",
+      "Size:\t 400 \tTime:\t 0.4313790798187256 \tAccuracy:\t 10.4 %\n",
+      "Size:\t 800 \tTime:\t 0.871290922164917 \tAccuracy:\t 9.7 %\n",
+      "Size:\t 1600 \tTime:\t 1.7598869800567627 \tAccuracy:\t 10.8 %\n",
+      "Size:\t 3200 \tTime:\t 3.5047619342803955 \tAccuracy:\t 11.4 %\n",
+      "Size:\t 6400 \tTime:\t 6.8940589427948 \tAccuracy:\t 10.5 %\n",
+      "Size:\t 12800 \tTime:\t 8.362821817398071 \tAccuracy:\t 10.8 %\n",
+      "Size:\t 25000 \tTime:\t 22.78002405166626 \tAccuracy:\t 10.8 %\n"
+     ]
+    }
+   ],
    "source": [
     "#def P3(train_sizes, accuracies):\n",
     "\n",
     "### STUDENT START ###\n",
     "\n",
+    "train_sizes = [100, 200, 400, 800, 1600, 3200, 6400, 12800, 25000]\n",
+    "accuracies = []\n",
+    "infer_times = []\n",
     "\n",
+    "def eval_train_sizes(size):\n",
+    "    iter_train_data = train_data[:size]\n",
+    "    iter_train_labels = train_labels[:size]\n",
+    "    knn_cfr = KNeighborsClassifier(1)\n",
+    "    # Fit the model using the mini training set\n",
+    "    knn_cfr.fit(iter_train_data, iter_train_labels)\n",
+    "    # Start the timer for inference\n",
+    "    t_0 = time.time()\n",
+    "    # Now, collect predictions for the dev data set\n",
+    "    pred = knn_cfr.predict(dev_data)\n",
+    "    # Calculate time taken for inference\n",
+    "    t_infer = time.time() - t_0\n",
+    "    # Calculate the accuracy of the predictions by comparing the labels\n",
+    "    # against the predictions returned by the model.\n",
+    "    correct=0\n",
+    "    total = len(pred)\n",
+    "    for i in range(total):\n",
+    "        correct += (pred[i] == dev_labels[i])\n",
+    "    accuracy = (correct * 100)/total\n",
+    "    return accuracy, t_infer\n",
+    "\n",
+    "for i in range(len(train_sizes)):\n",
+    "    size = train_sizes[i]\n",
+    "    acc, t_infer = eval_train_sizes(size)\n",
+    "    accuracies.append(acc)\n",
+    "    infer_times.append(t_infer)\n",
+    "    print(\"Size:\\t\",size,\"\\tTime (seconds):\\t\", t_infer,\"\\tAccuracy:\\t\",acc,\"%\")\n",
+    "    \n",
     "### STUDENT END ###\n",
     "\n",
     "#train_sizes = [100, 200, 400, 800, 1600, 3200, 6400, 12800, 25000]\n",
