--- a/projects/Vijay_Singh_p1.ipynb
+++ b/projects/Vijay_Singh_p1.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,6 +48,7 @@
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.metrics import classification_report\n",
     "from sklearn import metrics\n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "# Set the randomizer seed so results are the same each time.\n",
     "np.random.seed(0)"
@@ -281,22 +282,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Size:\t 100 \tTime (seconds):\t 0.10414290428161621 \tAccuracy:\t 0.747\n",
-      "Size:\t 200 \tTime (seconds):\t 0.10590791702270508 \tAccuracy:\t 0.805\n",
-      "Size:\t 400 \tTime (seconds):\t 0.1086280345916748 \tAccuracy:\t 0.851\n",
-      "Size:\t 800 \tTime (seconds):\t 0.20672178268432617 \tAccuracy:\t 0.874\n",
-      "Size:\t 1600 \tTime (seconds):\t 0.4086120128631592 \tAccuracy:\t 0.9\n",
-      "Size:\t 3200 \tTime (seconds):\t 0.7289440631866455 \tAccuracy:\t 0.94\n",
-      "Size:\t 6400 \tTime (seconds):\t 1.4502060413360596 \tAccuracy:\t 0.951\n",
-      "Size:\t 12800 \tTime (seconds):\t 3.077863931655884 \tAccuracy:\t 0.963\n",
-      "Size:\t 25000 \tTime (seconds):\t 6.2712721824646 \tAccuracy:\t 0.966\n"
+      "Size:\t 100 \tTime (seconds):\t 0.10482621192932129 \tAccuracy:\t 0.747\n",
+      "Size:\t 200 \tTime (seconds):\t 0.10778927803039551 \tAccuracy:\t 0.805\n",
+      "Size:\t 400 \tTime (seconds):\t 0.10646700859069824 \tAccuracy:\t 0.851\n",
+      "Size:\t 800 \tTime (seconds):\t 0.20888090133666992 \tAccuracy:\t 0.874\n",
+      "Size:\t 1600 \tTime (seconds):\t 0.4149930477142334 \tAccuracy:\t 0.9\n",
+      "Size:\t 3200 \tTime (seconds):\t 0.7109560966491699 \tAccuracy:\t 0.94\n",
+      "Size:\t 6400 \tTime (seconds):\t 1.5483179092407227 \tAccuracy:\t 0.951\n",
+      "Size:\t 12800 \tTime (seconds):\t 3.2982990741729736 \tAccuracy:\t 0.963\n",
+      "Size:\t 25000 \tTime (seconds):\t 6.94809889793396 \tAccuracy:\t 0.966\n"
      ]
     }
    ],
@@ -340,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -366,11 +367,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted accuracy for n=60000 is 0.541858317284915 %\n"
+      "Predicted accuracy for n=60000 is 97.0 %\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/vijay/anaconda3/lib/python3.7/site-packages/sklearn/utils/validation.py:761: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n",
+      "/Users/vijay/anaconda3/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n"
      ]
     }
    ],
    "source": [
+    "from sklearn import preprocessing\n",
     "def P4():\n",
     "\n",
     "### STUDENT START ###\n",
@@ -389,14 +401,14 @@
     "    plt.xlabel('Size of training data')\n",
     "    plt.show()\n",
     "\n",
-    "    # Let's apply the a log transformation to the training sizes to get \n",
-    "    # a scaled version of X.\n",
-    "    #X_scaled_data = np.log(train_sizes).reshape(-1,1)\n",
+    "    # Since the accuracies are decimals, we can convert them into %ages, and then\n",
+    "    # convert them into integers to use LogisticRegression. \n",
     "    \n",
-    "    #reg.fit(X_scaled_data, Y_value)\n",
-    "    score = reg.score(X_data, Y_value)\n",
-    "    #pred = reg.predict([np.log([60000])])\n",
-    "    print(\"Predicted accuracy for n=60000 is\", pred[0][0]*score,\"%\")\n",
+    "    Y_enc = np.ceil(Y_value * 100)\n",
+    "    logit_reg = LogisticRegression(random_state=0, solver='lbfgs', multi_class='multinomial')\n",
+    "    logit_reg.fit(X_data, Y_enc)\n",
+    "    pred = logit_reg.predict([[60000]])\n",
+    "    print(\"Predicted accuracy for n=60000 is\", pred[0],\"%\")\n",
     "\n",
     "### STUDENT END ###\n",
     "\n",
@@ -543,19 +555,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 175,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy with the NB Classifier with binarized data is 0.836\n",
+      "Accuracy with the NB Classifier with 3-valued data is 0.836\n"
+     ]
+    }
+   ],
    "source": [
-    "#def P7():\n",
+    "from sklearn.preprocessing import binarize\n",
+    "def P7():\n",
     "\n",
     "### STUDENT START ###\n",
+    "    mtd_bin = binarize(mini_train_data)\n",
+    "    nb_cfr = BernoulliNB()\n",
+    "    nb_cfr.fit(mtd_bin, mini_train_labels)\n",
+    "    dd_bin = binarize(dev_data)\n",
+    "    dev_pred = nb_cfr.predict(dd_bin)\n",
+    "    acc = metrics.accuracy_score(dev_labels, dev_pred)\n",
+    "    print(\"Accuracy with the NB Classifier with binarized data is\", acc)\n",
     "\n",
+    "    mtd_s3 = multirize(mini_train_data)\n",
+    "    nb_cfr.fit(mtd_s3, mini_train_labels)\n",
+    "    dd_s3 = multirize(dev_data)\n",
+    "    dev_pred = nb_cfr.predict(dd_s3)\n",
+    "    acc = metrics.accuracy_score(dev_labels, dev_pred)\n",
+    "    print(\"Accuracy with the NB Classifier with 3-valued data is\", acc)\n",
     "\n",
-    "    \n",
+    "def multirize(A):\n",
+    "    A_copy = A\n",
+    "    c_1 = 1/3\n",
+    "    c_2 = 2/3\n",
+    "    for x in np.nditer(A_copy, op_flags = ['readwrite']):\n",
+    "        if x < c_1:\n",
+    "            x[...] = 0\n",
+    "        elif x < c_2:\n",
+    "            x[...] = 1\n",
+    "        else:\n",
+    "            x[...] = 2\n",
+    "    return A_copy\n",
+    "\n",
     "### STUDENT END ###\n",
     "\n",
-    "#P7()"
+    "P7()"
    ]
   },
   {
@@ -576,29 +623,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 183,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/vijay/anaconda3/lib/python3.7/site-packages/sklearn/naive_bayes.py:480: UserWarning: alpha too small will result in numeric errors, setting alpha = 1.0e-10\n",
+      "  'setting alpha = %.1e' % _ALPHA_MIN)\n",
+      "/Users/vijay/anaconda3/lib/python3.7/site-packages/sklearn/naive_bayes.py:480: UserWarning: alpha too small will result in numeric errors, setting alpha = 1.0e-10\n",
+      "  'setting alpha = %.1e' % _ALPHA_MIN)\n",
+      "/Users/vijay/anaconda3/lib/python3.7/site-packages/sklearn/naive_bayes.py:480: UserWarning: alpha too small will result in numeric errors, setting alpha = 1.0e-10\n",
+      "  'setting alpha = %.1e' % _ALPHA_MIN)\n",
+      "/Users/vijay/anaconda3/lib/python3.7/site-packages/sklearn/naive_bayes.py:480: UserWarning: alpha too small will result in numeric errors, setting alpha = 1.0e-10\n",
+      "  'setting alpha = %.1e' % _ALPHA_MIN)\n",
+      "/Users/vijay/anaconda3/lib/python3.7/site-packages/sklearn/naive_bayes.py:480: UserWarning: alpha too small will result in numeric errors, setting alpha = 1.0e-10\n",
+      "  'setting alpha = %.1e' % _ALPHA_MIN)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy with the NB Classifier with binarized data is 0.849\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/vijay/anaconda3/lib/python3.7/site-packages/sklearn/model_selection/_search.py:841: DeprecationWarning: The default of the `iid` parameter will change from True to False in version 0.22 and will be removed in 0.24. This will change numeric results when test-set sizes are unequal.\n",
+      "  DeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
-    "#def P8(alphas):\n",
+    "def P8(alphas):\n",
     "\n",
     "### STUDENT START ###\n",
+    "    mtd_bin = binarize(mini_train_data)\n",
     "\n",
+    "    params = [alphas]\n",
+    "    nb_cfr = BernoulliNB()\n",
+    "    nb_cfr = GridSearchCV(nb_cfr, params, cv=5)\n",
     "\n",
+    "    nb_cfr.fit(mtd_bin, mini_train_labels)\n",
+    "\n",
+    "    dd_bin = binarize(dev_data)\n",
+    "    dev_pred = nb_cfr.predict(dd_bin)\n",
+    "    \n",
+    "    acc = metrics.accuracy_score(dev_labels, dev_pred)\n",
+    "    print(\"Accuracy with the NB Classifier with binarized data is\", acc)    \n",
+    "    return nb_cfr\n",
     "\n",
     "### STUDENT END ###\n",
     "\n",
-    "#alphas = {'alpha': [0.0, 0.0001, 0.001, 0.01, 0.1, 0.5, 1.0, 2.0, 10.0]}\n",
-    "#nb = P8(alphas)"
+    "alphas = {'alpha': [0.0, 0.0001, 0.001, 0.01, 0.1, 0.5, 1.0, 2.0, 10.0]}\n",
+    "nb = P8(alphas)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 185,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'alpha': 0.1}\n"
+     ]
+    }
+   ],
    "source": [
-    "#print nb.best_params_"
+    "print(nb.best_params_)"
    ]
   },
   {
