--- a/projects/Vijay_Singh_p1.ipynb
+++ b/projects/Vijay_Singh_p1.ipynb
@@ -711,25 +711,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(9) Try training a model using GuassianNB, which is intended for real-valued features, and evaluate on the dev data. You'll notice that it doesn't work so well. Try to diagnose the problem. You should be able to find a simple fix that returns the accuracy to around the same rate as BernoulliNB. Explain your solution.\n",
+    "(9) Try training a model using GaussianNB, which is intended for real-valued features, and evaluate on the dev data. You'll notice that it doesn't work so well. Try to diagnose the problem. You should be able to find a simple fix that returns the accuracy to around the same rate as BernoulliNB. Explain your solution.\n",
     "\n",
     "Hint: examine the parameters estimated by the fit() method, theta\\_ and sigma\\_."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 206,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'var_smoothing': 0.05}\n",
+      "Accuracy with the Gaussian NB Classifier with data is 0.81\n"
+     ]
+    }
+   ],
    "source": [
-    "#def P9():\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "def P9():\n",
+    "\n",
+    "### STUDENT END ###\n",
+    "    params = [\n",
+    "        {'var_smoothing': [0.01, 0.05, 0.1]}\n",
+    "    ]\n",
+    "    gnb_cfr = GaussianNB(priors=None, var_smoothing=0.25)\n",
+    "    gnb_cfr = GridSearchCV(gnb_cfr, params, cv=5)\n",
+    "    \n",
+    "    gnb_cfr.fit(mini_train_data, mini_train_labels)\n",
+    "    \n",
+    "    print(gnb_cfr.best_params_)\n",
+    "    #print(\"GNB theta\", gnb_cfr.theta_)\n",
+    "    #print(\"GNB sigma\", gnb_cfr.sigma_)\n",
+    "    \n",
+    "    dev_pred = gnb_cfr.predict(dev_data)\n",
+    "    \n",
+    "    acc = metrics.accuracy_score(dev_labels, dev_pred)\n",
+    "    print(\"Accuracy with the Gaussian NB Classifier with data is\", acc)    \n",
+    "    return gnb_cfr\n",
     "\n",
     "### STUDENT END ###\n",
     "\n",
-    "\n",
-    "### STUDENT END ###\n",
-    "\n",
-    "#gnb = P9()"
+    "gnb = P9()"
    ]
   },
   {
